Se agrgo boton Enviar

--- a/Index.html
+++ b/Index.html
@@ -8,4 +8,8 @@
 
 </body>
 	<h1>Titulo nuevo modificado en rama develop</h1>
+	
+	<form action="#" method="get">
+		<input type="button" value="Enviar">
+	</form>
 </html>
